WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268977
[GStreamer] De-initialize only if leaks tracer is active
https://bugs.webkit.org/show_bug.cgi?id=268977
Summary
[GStreamer] De-initialize only if leaks tracer is active
Philippe Normand
Reported
2024-02-08 02:25:48 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-02-08 02:31:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24060
EWS
Comment 2
2024-02-16 02:12:10 PST
Committed
274811@main
(592d7746b7a9): <
https://commits.webkit.org/274811@main
> Reviewed commits have been landed. Closing PR #24060 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-16 02:13:16 PST
<
rdar://problem/123077696
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug