[GStreamer] De-initialize only if leaks tracer is active https://bugs.webkit.org/show_bug.cgi?id=268977

Reviewed by Xabier Rodriguez-Calvar.

The `gst_deinit()` call is useful only if the leaks tracer is active. Otherwise resources will be
freed anyway when the WebProcess terminates.

* Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::adoptGRef):
(WTF::refGPtr<GstTracer>):
(WTF::derefGPtr<GstTracer>):
* Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.h:
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::deinitializeGStreamer):

Canonical link: https://commits.webkit.org/274811@main